--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.javamentor</groupId>
-    <artifactId>spring-mvc</artifactId>
+    <artifactId>PP_2_3_1_spring-mvc-hibernate</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>war</packaging>
 
     <properties>
-        <spring.version>5.3.14</spring.version>
+        <spring.version>5.3.29</spring.version>
     </properties>
 
     <dependencies>
@@ -57,13 +57,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>Spring_MVC</finalName>
+        <finalName>PP_2_3_1_spring-mvc-hibernate</finalName>
     </build>
 
 </project>
