--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -8,6 +8,6 @@ db.password=password
 # Hibernate properties
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
-#hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=update
 #hibernate.hbm2ddl.auto=create-drop
-hibernate.hbm2ddl.auto=create
+#hibernate.hbm2ddl.auto=create
